Restructured to function with GHPages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://samlempp.github.io/my-app",
-  "name": "piccup-app",
+  "name": "piccup",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
