GHPages and React fix 3

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://samlempp.github.io/my-app",
+  "homepage": "http://samlempp.github.io/piccup",
   "name": "piccup",
   "version": "0.1.0",
   "private": true,
